--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -10,4 +10,16 @@
     <ProjectReference Include="..\Applicaction\Applicaction.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Finbuckle.MultiTenant" Version="9.0.0" />
+    <PackageReference Include="Finbuckle.MultiTenant.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Finbuckle.MultiTenant.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
