--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost:5432;Username=user;Password=123456;Database=school_system"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
