feat(infrastructure): add SwaggerGlobalProcessor

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -7,6 +7,15 @@
     "TokenExpiryTimeInMinutes": 60,
     "RefreshTokenExpiryTimeInDays": 7
   },
+  "SwaggerSettings": {
+    "Title": "NET 9.0 WebAPI - School System",
+    "Description": "Shool syste API service.",
+    "ContactName": "Developer",
+    "ContactEmail": "developer@example.com",
+    "ContactUrl": "",
+    "LicenseName": "MIT License",
+    "LicenseUrl":""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
