--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -9,7 +9,7 @@
   },
   "SwaggerSettings": {
     "Title": "NET 9.0 WebAPI - School System",
-    "Description": "Shool syste API service.",
+    "Description": "Shool system API service.",
     "ContactName": "Developer",
     "ContactEmail": "developer@example.com",
     "ContactUrl": "",
